# simple_veracrypt_container_interface

./: README.md  pyproject.toml
examples/: basic_usage.py
simple_veracrypt_container_interface/: veracrypt_container.py
simple_veracrypt_container_interface/utilities/: exceptions.py  utilities.py
tests/integration/: test_veracrypt_containers_integration.py
tests/integration/veracrypt_volumes/exfat/keyfile_only/: veracrypt_volume_test_keyfile.hc
tests/integration/veracrypt_volumes/exfat/password_and_keyfile/: veracrypt_volume_test_password_and_keyfile.hc
tests/integration/veracrypt_volumes/exfat/password_only/: veracrypt_volume_test_password.hc
tests/unit/: test_veracrypt_container.py
