[tool.poetry]
name = "simple-veracrypt-container-interface"
version = "0.1.0"
description = "Wrapper code designed to mount and unmount containers made by the VeraCrypt application. Designed to be used alongside the `simple_async_command_manager` package."
authors = ["SBroaddus220 <steven.broaddus220@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [{include = "simple_veracrypt_container_interface"}]

[tool.poetry.dependencies]
python = "^3.11"
simple_async_command_manager = "^0.1.0"

[tool.poetry.dev-dependencies]
parameterized = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
